--- a/app/views/template/css/404.scss
+++ b/app/views/template/css/404.scss
@@ -62,6 +62,20 @@ body {
 			letter-spacing: 1px;
 			color: white;
 		}
+
+		a {
+			text-align: center;
+			font-size: 1.5rem;
+			color: #fff;
+			display: inline-block;
+			text-decoration: none;
+			margin-top: 1rem;
+			transition: 0.3s all ease;
+
+			&:hover {
+				color: #CE5840;
+			}
+		}
 	}
 }
 
