--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -415,7 +415,10 @@ a {
 				position: absolute;
 				bottom: 112px;
 				width: 100%;
-				background-color: $bg-notification;
+
+				&.non-vue {
+					background-color: $bg-notification;
+				}
 			}
 
 			&.logout {
