adding customizable scrollbar
modification on admin menu, to add the possibility of an unlimited number of link in the menu

--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -327,6 +327,11 @@ a {
 		}
 	}
 
+	.principal {
+		max-height: 740px;
+		overflow: hidden;
+	}
+
 	.titre {
 		font-family: $police-sec;
 		font-size: 25px;
