Adding the possibility to modify website configuration directly in the administration for super admin

--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -602,6 +602,10 @@ header {
 		display: inline-block;
 	}
 
+	&.link {
+		padding: 11px 20px;
+	}
+
 	i {
 		margin-right: 5px;
 		transition: 0.3s all ease;
