hotfix of a bug in administrator login form

--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -209,6 +209,7 @@ a {
 				position: relative;
 				display: block;
 				width: 100%;
+				min-width: inherit;
 				height: 32px;
 				padding: 8px 3px 3px 3px;
 				margin: 0;
