Update : new navigation system. Ribs is passed on 2.3.1

--- a/app/views/template/css/style.css
+++ b/app/views/template/css/style.css
@@ -1,1 +1,25 @@
-body{font-family:verdana}.inner{width:1180px;margin:auto}.colonne{display:table-cell;vertical-align:top}.clear{clear:both}a{text-decoration:none;color:inherit}.separation{width:100%;height:20px}
+/*@font-face {
+	font-family: Impact;
+	src: url('../police/impact.ttf');
+}*/
+body {
+  font-family: verdana; }
+
+.inner {
+  width: 1180px;
+  margin: auto; }
+
+.colonne {
+  display: table-cell;
+  vertical-align: top; }
+
+.clear {
+  clear: both; }
+
+a {
+  text-decoration: none;
+  color: inherit; }
+
+.separation {
+  width: 100%;
+  height: 20px; }
