--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -86,6 +86,7 @@ body {
 
 a {
 	text-decoration: none;
+	color: inherit;
 
 	&:hover {
 		cursor: pointer;
@@ -748,9 +749,16 @@ header {
 		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	}
 
-
 	&.seo-galeriephoto {
 		display: none;
+	}
+
+	&.gestion-navigation {
+		li {
+			border: 1px solid #CCCCCC;
+			padding: 10px;
+			margin: 10px 0px;
+		}
 	}
 }
 
