--- a/installation/views/template/css/style.scss
+++ b/installation/views/template/css/style.scss
@@ -194,6 +194,7 @@ a {
 		.bloc {
 			position: relative;
 			padding: 16px 0 8px 0;
+			margin-bottom: 10px;
 
 			.label {
 				position: relative;
@@ -355,6 +356,7 @@ a {
 
 	&:hover {
 		background-color: $color-lien-hover-page;
+		color: #fff;
 		transition: 0.3s all ease;
 		cursor: pointer;
 	}
@@ -375,6 +377,10 @@ a {
 
 	&.ml0 {
 		margin-left: 0;
+	}
+
+	&.t0 {
+		top: 0;
 	}
 }
 
