correction of width li

--- a/app/views/template/css/nav-responsive.scss
+++ b/app/views/template/css/nav-responsive.scss
@@ -48,6 +48,7 @@ $color-i-activated: #fff;
 			border-top: 1px solid #ffffff;
 			border-left: 0px solid transparent;
 			transition: 0.3s all ease;
+			width: 100%;
 
 			&:last-child {
 				border-bottom: 1px solid #ffffff;
