--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -381,6 +381,7 @@ a {
 	.mon-compte {
 		margin: 10px 0 10px 10px;
 		transition: all 0.5s ease;
+		overflow: hidden;
 
 		.image {
 			width: 60px;
