--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -1,63 +1,6 @@
-@font-face {
-	font-family: lobster;
-	src: url(../polices/lobster.ttf);
-}
-
-@font-face {
-	font-family: noto-sans;
-	src: url(../polices/noto-sans.ttf);
-}
-
-/*----couleurs générales ----*/
-$bg-general: #2F3B4C;
-$bg-notification: #f34336;
-
-/*----pour la page de login ----*/
-$color-error-input-login: #F34336;
-
-/*----couleurs pour les liens ----*/
-$color-lien: #AFBDC4;
-$color-lien-page: #2196F3;
-$color-lien-hover-page: #217ED3;
-$bg-lien-supprimer: #F34336;
-$bg-lien-supprimer-hover: #DD2A2A;
-
-/*----couleurs pour les labels et titres + polices ----*/
-$color-titre: #AFBDC4;
-$clr-texte-label: #bfbfbf;
-$police-princ: noto-sans;
-$police-sec: lobster;
-
-/*---- barre de menu à gauche ----*/
-$menug-bg-header: #00BEE7;
-$menug-clr-header: #0082A8;
-$menug-clr-border-lien: #2BA5CA;
-$menug-ombre-header: #2C3747;
-$bg-lien-hover-menu: #2A3344;
-
-/*---- pour les pages ----*/
-$bg-header-page: #ffffff;
-$bg-page: #fff;
-
-/*---- pour les modules ----*/
-$bg-categorie: rgba(47, 59, 76, 0.8);
-$clr-categorie: #fff;
-
+@import "variables";
 @import "../../../../libs/input_file/css/style";
 
-@mixin button-txt {
-	border: none;
-	color: $color-lien-page;
-	text-transform: uppercase;
-	background-color: inherit;
-	transition: all 0.3s ease;
-	font-size: 16px;
-
-	&:hover {
-		cursor: pointer;
-		color: $color-lien-hover-page;
-	}
-}
 
 
 body {
@@ -713,7 +656,17 @@ header {
 		}
 
 		button {
-			@include button-txt();
+			border: none;
+			color: $color-lien-page;
+			text-transform: uppercase;
+			background-color: inherit;
+			transition: all 0.3s ease;
+			font-size: 16px;
+
+			&:hover {
+				cursor: pointer;
+				color: $color-lien-hover-page;
+			}
 		}
 	}
 
