--- a/libs/input_file/css/style.css
+++ b/libs/input_file/css/style.css
@@ -1,80 +1,40 @@
-/*
-Syntax error: Undefined variable: "$clr-label-input-file".
-        on line 42 of style.scss
+.js .inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+  display: none; }
+  .js .inputfile + label {
+    width: 510px;
+    max-width: 100%;
+    font-size: 1.25rem;
+    font-weight: 700;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    padding: 0.625rem 1.25rem;
+    margin-top: -40px; }
+    .js .inputfile + label svg {
+      width: 1em;
+      height: 1em;
+      vertical-align: middle;
+      fill: currentColor;
+      margin-top: -0.25em;
+      margin-right: 0.25em; }
+  .js .inputfile:focus, .js .inputfile.has-focus {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px; }
 
-37: }
-38: 
-39: .inputfile-2 {
-40: 
-41: 	&+ label {
-42: 		color: $clr-label-input-file;
-43: 		border: 2px solid currentColor;
-44: 
-45: 		&:hover {
-46: 			color: $clr-label-input-file-hover;
-47: 		}
+.inputfile-2 + label {
+  color: #2196F3;
+  border: 2px solid currentColor; }
+  .inputfile-2 + label:hover {
+    color: #217ED3; }
+.inputfile-2:focus, .inputfile-2.has-focus {
+  color: #217ED3; }
 
-Backtrace:
-style.scss:42
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/script/tree/variable.rb:49:in `_perform'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/script/tree/node.rb:50:in `perform'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:366:in `visit_prop'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:79:in `block in with_base'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:121:in `with_frame'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:79:in `with_base'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:152:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:389:in `map'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:79:in `block in with_base'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:121:in `with_frame'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:79:in `with_base'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:152:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:389:in `map'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:79:in `block in with_base'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:121:in `with_frame'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/stack.rb:79:in `with_base'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:152:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:52:in `map'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:151:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/root_node.rb:36:in `css_tree'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/tree/root_node.rb:20:in `render'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/engine.rb:274:in `render'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/plugin/compiler.rb:483:in `update_stylesheet'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/plugin/compiler.rb:214:in `block in update_stylesheets'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/plugin/compiler.rb:208:in `each'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/plugin/compiler.rb:208:in `update_stylesheets'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/plugin/compiler.rb:461:in `on_file_changed'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/lib/sass/plugin/compiler.rb:323:in `block in watch'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/vendor/listen/lib/listen/listener.rb:252:in `call'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-E:/LOGICIELS/Ruby200/lib/ruby/gems/2.0.0/gems/sass-3.3.13/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined variable: \"$clr-label-input-file\".\A         on line 42 of style.scss\A \A 37: }\A 38: \A 39: .inputfile-2 {\A 40: \A 41: 	&+ label {\A 42: 		color: $clr-label-input-file;\A 43: 		border: 2px solid currentColor;\A 44: \A 45: 		&:hover {\A 46: 			color: $clr-label-input-file-hover;\A 47: 		}"; }
+/*# sourceMappingURL=style.css.map */
