--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -728,9 +728,7 @@ header {
 		margin: 15px;
 		position: relative;
 		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-		
 		float: left;
-		display: inline;
 		
 		.image {
 			max-height: 235px;
@@ -877,6 +875,20 @@ header {
 					}
 				}
 			}
+		}
+	}
+	
+	.full-bloc {
+		background-color: #FFFFFF;
+		width: 100%;
+		height: 100px;
+		margin: 20px 0px;
+		padding: 20px;
+		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+		
+		a {
+			float: right;
+			min-width: inherit;
 		}
 	}
 }
