--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "reset";
 @import "../../../../libs/effet_css/effet";
 @import "../../../../libs/input_file/css/style";
 
