adding more separation in admin scss files

--- a/admin/views/template/css/style.scss
+++ b/admin/views/template/css/style.scss
@@ -41,521 +41,17 @@ a {
 
 
 /*------------------------------ LOGIN -------------------------------------------------------*/
-@keyframes cardEnter {
-	0%, 20%, 40%, 60%, 80%, 100% {
-		-webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-		transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-	}
-	0% {
-		opacity: 0;
-		-webkit-transform: scale3d(0.3, 0.3, 0.3);
-		-ms-transform: scale3d(0.3, 0.3, 0.3);
-		transform: scale3d(0.3, 0.3, 0.3);
-	}
-	20% {
-		-webkit-transform: scale3d(1.1, 1.1, 1.1);
-		-ms-transform: scale3d(1.1, 1.1, 1.1);
-		transform: scale3d(1.1, 1.1, 1.1);
-	}
-	40% {
-		-webkit-transform: scale3d(0.9, 0.9, 0.9);
-		-ms-transform: scale3d(0.9, 0.9, 0.9);
-		transform: scale3d(0.9, 0.9, 0.9);
-	}
-	60% {
-		opacity: 1;
-		-webkit-transform: scale3d(1.03, 1.03, 1.03);
-		-ms-transform: scale3d(1.03, 1.03, 1.03);
-		transform: scale3d(1.03, 1.03, 1.03);
-	}
-	80% {
-		-webkit-transform: scale3d(0.97, 0.97, 0.97);
-		-ms-transform: scale3d(0.97, 0.97, 0.97);
-		transform: scale3d(0.97, 0.97, 0.97);
-	}
-	100% {
-		opacity: 1;
-		-webkit-transform: scale3d(1, 1, 1);
-		-ms-transform: scale3d(1, 1, 1);
-		transform: scale3d(1, 1, 1);
-	}
-}
-
-.login {
-	background-color: $bg-general;
-
-	#particles-js{
-		width: 100%;
-		height: 100%;
-		position: absolute;
-	}
-
-	.login-form {
-		opacity: 0;
-		height: 0;
-		max-width: 350px;
-		border-radius: 2px;
-		background-color: #EBEDF1;
-		box-shadow: 0 10px 20px rgba(0, 0, 0, .19),
-		0 6px 6px rgba(0, 0, 0, .23);
-		display: none;
-
-		&.active {
-			-webkit-animation: cardEnter 0.75s ease-in-out 0.5s;
-			animation: cardEnter 0.75s ease-in-out 0.5s;
-			-webkit-animation-fill-mode: both;
-			animation-fill-mode: both;
-			height: auto;
-			margin: 0px auto;
-			padding: 20px;
-			opacity: 1;
-			display: block;
-			position: relative;
-			top: 50px;
-		}
-
-		h1 {
-			color: $color-titre;
-			text-align: center;
-			margin-top: 10px;
-			margin-bottom: -10px;
-		}
-
-		img	{
-			margin-left: 75px;
-		}
-
-		.submit-contenu {
-			margin-top: 40px;
-			margin-bottom: 10px;
-		}
-
-		.bloc {
-			position: relative;
-			padding: 16px 0 8px 0;
-
-			.label {
-				position: relative;
-				margin: 0;
-				display: block;
-				color: #A7A7A7;
-				line-height: 16px;
-				font-size: 16px;
-				font-weight: 400;
-				transform: translateY(32px);
-				transition: transform 0.3s, font-size 0.3s;
-
-				&.label-textarea {
-					transform: translateY(37px);
-					margin-left: 10px;
-				}
-			}
-
-			input {
-				position: relative;
-				display: block;
-				width: 100%;
-				min-width: inherit;
-				height: 32px;
-				padding: 8px 3px 3px 3px;
-				margin: 0;
-				line-height: 16px;
-				font-size: 16px;
-				background: transparent;
-				border: none;
-				-webkit-appearance: none;
-				outline: none;
-			}
-
-			&:not(.no-input) {
-				&::before, &::after {
-					content: '';
-					height: 2px;
-					width: 100%;
-					position: absolute;
-					bottom: 6px;
-					left: 0;
-					background-color: #A7A7A7;
-				}
-
-				&::after {
-					background-color: $color-lien-page;
-					transform: scaleX(0);
-					transition: transform 0.3s ease;
-				}
-			}
-
-			/*appellee dans le js*/
-			&.is-focused {
-				.label {
-					color: $color-lien-page
-				}
-
-				&::after {
-					transform: scaleX(1);
-				}
-			}
-			/*appelee par le js egalement*/
-			&.has-label {
-				.label {
-					transform: translateY(0);
-					font-size: 14px;
-					margin-left: 0;
-				}
-
-				&.invalid {
-					.label::after {
-						top: 65px;
-					}
-				}
-			}
-
-			/*appelle par le js*/
-			&.invalid {
-				&::after {
-					transform: scaleX(1);
-					background-color: $color-error-input-login;
-				}
-
-				.label::after {
-					color: $color-error-input-login;
-					content: attr(data-error);
-					opacity: 1;
-					position: absolute;
-					top: 35px;
-					left: 0;
-				}
-			}
-		}
-
-		.lien {
-			a {
-				color: #A7A7A7;
-				transition: all 0.3s ease;
-
-				&:hover {
-					color: $color-lien-hover-page
-				}
-			}
-		}
-	}
-}
+@import "login";
 
 
 
 /*------------------------------ AFFICHAGE MENU GAUCHE -------------------------------------------------------*/
-.menu {
-	width: 55px;
-	height: 100%;
-	background-color: $bg-general;
-	position: fixed;
-	z-index: 10;
-	float: left;
-	transition: all 0.5s ease;
-	margin-left: -400px;
-
-	/*pour quand le menu est actif*/
-	&.active {
-		width: 314px;
-		margin-left: 0px;
-		transition: width 0.5s ease;
-
-		.titre {
-			width: 294px;
-			margin-left: 0;
-			transition: width 0.5s ease;
-
-			h1 {
-				margin-left: 0px;
-				transition: all 0.3s 0.2s ease-out;
-			}
-
-			i {
-				margin-top: -30px;
-			}
-		}
-
-		a {
-			margin-left: 0px;
-			transition: all 0.3s 0.2s ease-out;
-			width: 90%;
-			height: 100%;
-			padding: 10px 0px;
-			display: inline-block;
-		}
-
-		.logout {
-			width: 294px;
-		}
-	}
-
-	.principal {
-		max-height: 740px;
-	}
-
-	.titre {
-		font-family: $police-sec;
-		font-size: 25px;
-		background-color: $menug-bg-header;
-		color: $menug-clr-header;
-		padding: 10px;
-		box-shadow: -3px 3px 3px $menug-ombre-header;
-		height: 38px;
-		width: 55px;
-		margin-left: 400px;
-		transition: all 0.5s ease;
-
-		h1 {
-			margin-left: -300px;
-			transition: all 0.3s ease-out;
-		}
-
-		i {
-			float: right;
-			margin-top: -30px;
-			margin-right: 10px;
-			color: #fff;
-
-			&:hover {
-				transform: Scale(1.2);
-				cursor: pointer;
-			}
-		}
-	}
-
-	.mon-compte {
-		margin: 10px 0 10px 10px;
-		transition: all 0.5s ease;
-		overflow: hidden;
-
-		.image {
-			width: 60px;
-			height: 60px;
-			border-radius: 120px;
-			overflow: hidden;
-			margin-right: 10px;
-		}
-
-		.info-compte {
-			h3 {
-				color: $color-lien;
-				margin-bottom: 10px;
-				margin-top: 10px;
-			}
-		}
-
-		.fonctions {
-			a {
-				padding: 0;
-
-				i {
-					margin-right: 20px;
-					color: $color-lien;
-					transition: all 0.3s ease;
-
-					&:hover {
-						color: $menug-clr-border-lien;
-					}
-				}
-			}
-
-			.notif {
-				&.non-vue i {
-					color: $bg-notification;
-				}
-			}
-
-			.logout {
-				i:hover {
-					color: #FF0000;
-				}
-			}
-		}
-	}
-
-	ul {
-		li {
-			padding: 0px 10px;
-			font-size: 14px;
-			display: block;
-			transition: 0.3s all ease;
-			text-transform: uppercase;
-			border-top: 1px solid rgba(255,255,255,0.05);
-			border-bottom: 1px solid #2b333c;
-			border-left: 0px solid transparent;
-			transition: 0.3s all ease;
-			height: 36px;
-
-			ul {
-				>li {
-					position: relative;
-					left: 0px;
-					top: -57px;
-					background-color: $bg-general;
-					z-index: -1;
-					display: none;
-					transition: all 3s ease;
-
-					&:hover {
-						display: block;
-					}
-				}
-			}
-
-			i {
-				color: $color-lien;
-				margin-right: 5px;
-				margin-top: 10px;
-				transition: 0.3s all ease;
-			}
-
-			a {
-				color: $color-lien;
-				transition: all 0.3s ease-out;
-				margin-left: -300px;
-			}
-
-			&:hover {
-				background-color: $bg-lien-hover-menu;
-				border-left: 3px solid $menug-clr-border-lien;
-				cursor: pointer;
-
-				ul {
-					li {
-						display: block;
-						left: 300px;
-						transition: all 0.3s ease;
-					}
-				}
-			}
-
-			&.active {
-				background-color: $bg-lien-hover-menu;
-			}
-
-			&.support {
-				position: absolute;
-				bottom: 0px;
-				width: 294px;
-
-				&:hover {
-					width: 291px;
-				}
-			}
-		}
-	}
-}
+@import "left_nav";
 
 
 
 /*------------------------------ AFFICHAGE MENU HAUT -------------------------------------------------------*/
-header {
-	background-color: $bg-header-page;
-	color: $color-titre;
-	height: 58px;
-	box-shadow: 3px 3px 3px #ccc;
-
-	h1 {
-		text-transform: uppercase;
-		margin-right: 50px;
-		padding: 5px;
-		padding-top: 12px;
-	}
-
-	h1,h2 {
-		display: table-cell;
-	}
-}
-
-.nav-page {
-	background-color: $bg-general;
-	min-height: 48px;
-
-	.notification {
-		float: right;
-		display: block;
-		padding: 15.5px;
-		background: $bg-notification;
-		color: #fff;
-		transition: all 0.3s;
-
-		p {
-			margin-right: 5px;
-		}
-
-		&:hover {
-			background: #217ED3;
-		}
-	}
-
-	.inner >ul {
-		a {
-			height: 23px;
-			min-width: 120px;
-			display: block;
-			text-align: center;
-			padding: 10px 0px;
-			color: $color-lien;
-			transition: 0.3s all ease;
-			border-top: 5px solid transparent;
-		}
-
-		>li {
-			display: inline-block;
-			text-transform: uppercase;
-
-			&:hover {
-				ul {
-					left: auto;
-					min-height: 0;
-				}
-			}
-
-			>a {
-				margin: 0px 10px;
-				&:hover {
-					border-top: 5px solid $menug-clr-border-lien;
-					transition: 0.3s all ease;
-				}
-
-				&.active {
-					border-top: 5px solid $menug-clr-border-lien;
-				}
-			}
-		}
-
-		ul {
-			margin-left: 0px;
-			width: 215px;
-			position: absolute;
-			font-size: 13px;
-			z-index: 1;
-			left: -999em;
-
-			li {
-				background-color: $bg-general;
-				border-top: 1px solid rgba(255,255,255,0.05);
-				border-bottom: 1px solid #2b333c;
-
-				a {
-					width: 170px;
-					transition: 0.3s all ease;
-					text-align: left;
-					padding-left: 10px;
-
-					&:hover {
-						border-left: 5px solid $menug-clr-border-lien;
-						transition: 0.3s all ease;
-					}
-
-					&.active {
-						border-left: 5px solid $menug-clr-border-lien;
-					}
-				}
-			}
-		}
-	}
-}
+@import "top_nav";
 
 
 
@@ -701,10 +197,6 @@ header {
 		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	}
 
-	&.seo-galeriephoto {
-		display: none;
-	}
-
 	&.gestion-navigation {
 		li {
 			border: 1px solid #CCCCCC;
@@ -716,180 +208,5 @@ header {
 
 
 
-/*------------------------------ AFFICHAGE DU BLOG ++ LIVRE D'OR -------------------------------------------------------*/
-.droit-acces, .added-module {
-	.bloc {
-		margin-top: 30px;
-		background-color: $bg-page;
-		padding: 10px;
-		border-radius: 3px;
-		width: 370px;
-		max-width: 370px;
-		height: 470px;
-		margin: 15px;
-		position: relative;
-		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-		float: left;
-		
-		.image {
-			max-height: 235px;
-			overflow: hidden;
-		}
-		
-		
-		.categorie {
-			ul {
-				max-width: 370px;
-				
-				li {
-					display: inline-block;
-					background-color: $bg-categorie;
-					padding: 5px;
-					color: $clr-categorie;
-					margin-bottom: 5px;
-				}
-			}
-		}
-
-		h2 {
-			margin-top: 10px;
-		}
-
-		h3 {
-			font-weight: normal;
-			margin: 0px;
-			margin-bottom: 20px;
-			color: #ccc;
-		}
-
-		h4 {
-			margin-top: 20px;
-			color: #B3B3B3;
-
-			i {
-				transition: all 0.3s ease;
-				margin-right: 5px;
-			}
-
-			&.droit:hover {
-				cursor: pointer;
-				i {
-					margin-right: 10px;
-				}
-			}
-		}
-
-		.liste-droit {
-			max-height: 165px;
-			height: 150px;
-			position: relative;
-			overflow-y: auto;
-			overflow-x: hidden;
-
-			div {
-				visibility: hidden;
-				transform: translateX(500px);
-				transition: all 0.3s ease-in;
-				position: absolute;
-				width: 100%;
-
-				&.active {
-					visibility: visible;
-					transform: translateX(0px);
-					transition: all 0.4s ease-out;
-				}
-			}
-		}
-
-		/*lien dans les pages des listes d'articles ou autre*/
-		a {
-			position: absolute;
-			bottom: 36px;
-			border-top: 1px solid #ccc;
-			padding: 10px;
-			color: $color-lien-page;
-			transition: all 0.5s ease;
-
-			&.modifier {
-				left: 0px;
-				border-right: 1px solid #ccc;
-				bottom: 0px;
-				width: 155px;
-
-				&:hover {
-					background-color: $color-lien-hover-page;
-					color: #fff;
-					transition: all 0.5s ease-in;
-				}
-			}
-
-			&.commentaire {
-				left: 0px;
-				border-right: 1px solid #ccc;
-				border-bottom: 1px solid #ccc;
-
-				&:hover {
-					background-color: $color-lien-hover-page;
-					color: #fff;
-					transition: all 0.5s ease-in;
-				}
-			}
-
-			&.supprimer {
-				right: 0px;
-				border-left: 1px solid #ccc;
-				bottom: 0px;
-
-				&:hover {
-					background-color: $bg-lien-supprimer-hover;
-					color: #fff;
-					transition: all 0.5s ease-in;
-				}
-			}
-		}
-	}
-
-	.liste-element {
-		div {
-			padding: 10px;
-			margin: 10px 10px;
-			border: 2px solid #e6e6e6;
-			float: left;
-
-			p,a {
-				display: inline-block;
-				margin: 0 10px;
-			}
-
-			a {
-				text-transform: uppercase;
-				color: $color-lien-page;
-				transition: all 0.3s ease;
-
-				&:hover {
-					color: $color-lien-hover-page;
-				}
-
-				&.supprimer {
-					&:hover {
-						color: $bg-lien-supprimer-hover;
-					}
-				}
-			}
-		}
-	}
-	
-	.full-bloc {
-		background-color: #FFFFFF;
-		width: 100%;
-		height: 100px;
-		margin: 20px 0px;
-		padding: 20px;
-		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-		
-		a {
-			float: right;
-			min-width: inherit;
-		}
-	}
-}
+/*------------------------------ AFOR THE MODULES -------------------------------------------------------*/
+@import "module";
