add twig for configuration/mon-compte

--- a/admin/views/configuration/mon-compte.html
+++ b/admin/views/configuration/mon-compte.html
@@ -1,16 +1,15 @@
-<?=\core\HTML\flashmessage\FlashMessage::getFlash(); ?>
 <header>
 	<div class="inner">
 		<h1>Mon compte</h1>
 	</div>
 </header>
-<?php require_once('header.php'); ?>
+{% include("configuration/header.html") %}
 
 <div class="inner">
 	<section class="contenu modifier-contenu modif-compte">
 		<h2>Changer mon mot de passe</h2>
 		<p>Sur votre compte administrateur, vous pouvez uniquement changer votre mot de passe</p>
-		<form action="<?=ADMWEBROOT?>controller/core/auth/mdp/changer_mdp" method="post">
+		<form action="{{  ADMWEBROOT}}controller/core/auth/mdp/changer_mdp" method="post">
 			<div class="bloc">
 				<label class="label">Votre mot de passe actuel</label>
 				<input type="password" name="mdp" required>
